--- a/Css/styes.css
+++ b/Css/styes.css
@@ -3,6 +3,7 @@
 
 html {
     scroll-behavior: smooth;
+    background-color: rgb(211, 211, 222);
 }
 
 body {
@@ -12,14 +13,15 @@ body {
 }
 
 header {
-    background-color: #222;
-    color: white;
+   
+    color: rgb(38, 111, 159);
     padding: 20px;
-    text-align: center;
+    
+    
 }
 
 header a {
-    color: white;
+    color: rgb(44, 12, 88);
     text-decoration: none;
     margin: 0 15px;
     font-size: 18px;
@@ -51,11 +53,14 @@ img{
  
 }
 button{
+    color: #dcdcdc;
+    
     margin-top: -999px;    
   margin-left: px;   
   margin-bottom: -6px; 
-  border-radius:0% ;
-
+  border-radius:40% ;
+  
+  background-color: rgb(38, 111, 159);
 }
 form{
    
@@ -67,11 +72,15 @@ form{
     
 }
 
+
+
+
 .skills-section {
     max-width: 900px;
     margin: 40px auto;
     padding: 0 20px;
     font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
 }
 
 .skill-group {
@@ -122,13 +131,13 @@ form{
 
 .project-stack {
     font-size: 14px;
-    color: #444444;
+    color: #676464;
     margin-bottom: 12px;
 }
 
 .project-summary {
     font-size: 15px;
-    color: #333333;
+    color: #3f3c3c;
     margin-bottom: 12px;
 }
 
@@ -150,14 +159,16 @@ form{
     .section-title {
         font-size: 24px;
     }
-}.Photo {
+}
+.Photo {
   
   border: 2px solid black;
-  border-radius: 4000px;
-  margin-left: 400px; 
+  border-radius: 400px;
+  margin-left: 800px; 
   
   
 }
+
 
 
 
